# notionMCP

./: .env  .gitignore  .hintrc  ACTION_ITEMS.md  EXECUTIVE_SUMMARY.md  FREEZE_SNAPSHOT.md  IMPLEMENTATION_SUMMARY.md  OPENAPI_GENERATION_REPORT.md  QA_ENGINEERING_REPORT.md  QUICK_REFERENCE.md  REPORTS_README.md  SECURITY.md  WORKSPACE_CLEANUP_GUIDE.md  _e2e_full.py  docker-compose.yml  run-tunnel-setup.ps1  setup-tunnel.ps1
mcp_server/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  01_init_user.sh  DEV_POST.md  Dockerfile  GOVERNED_PATH_CHECKLIST.md  HARDENING.md  OPERATIONS.md  PRODUCTION_VALIDATION.md  README.md  RELEASE_NOTES.md  auth.py  dev-requirements.txt  frontend_bff.py  generate_api_key.py  production_preflight.py  pyproject.toml  requirements.txt  schema.sql  security_scan.py  server.py  show_databases.py  test_frontend_bff.py  test_metrics_endpoint.py  test_production_security_proof.py  test_rag_resource_audit.py  test_rag_session_context.py  test_request_id_threading.py  test_rls_fail_closed.py  test_server.py  verify_audit.py  verify_security.sh
mcp_server/.github/workflows/: ci.yaml  docker-image.yml
mcp_server/db/: schema.sql
mcp_server/db/migrations/: 001_domain_backbone.sql  003_domain_events_notices.sql
mcp_server/docs/architecture/: ARCHITECTURE_ALIGNMENT.md  ASSIGNMENT_RLS_MODEL.md
mcp_server/docs/migrations/: SCHEMA_MIGRATION_PLAN.md
mcp_server/docs/operations/: OPERATIONS.md  (+1 more)
mcp_server/migrations/: 002_assignments_and_secure_views.sql
mcp_server/openapi/: README.md  openapi.json  openapi.yaml
mcp_server/scripts/: generate_actor_signature.py  install_security_tools.ps1  minimal_load_test.py  verify_rls_policies.py
(+14 files in other folders)
